# mini-claude-code

./: .gitignore  README.md  cli.py  main.py  pyproject.toml  sample.py
.history/: 20260608-092331.json
agent_cli/: agent.py  config.py  context.py  session.py  tools.py
prompts/: system.md
tests/: test_tools.py
workspace/: proof.txt
