[project]
name = "agent-cli"
version = "0.6.0"
description = "A minimal AI coding agent built from scratch — tool-use loop, Docker sandboxing, and context management without frameworks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.41.0",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "tiktoken>=0.13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
